<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppBackground"
    tools:context=".RegisterFragment">

    <!-- Ícono superior -->
    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="75dp"
        android:background="@drawable/matchup_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Contenedor del formulario -->
    <LinearLayout
        android:id="@+id/formContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/imageLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="-30dp">

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="225dp"
            android:layout_height="48dp"
            android:layout_margin="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:inputType="textPersonName"
            android:hint="Nombre de usuario"
            style="@style/InputBackground" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="225dp"
            android:layout_height="48dp"
            android:layout_margin="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:inputType="textPersonName"
            android:hint="Nombre"
            style="@style/InputBackground"/>
        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="225dp"
            android:layout_height="48dp"
            android:layout_margin="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:inputType="textEmailAddress"
            android:hint="Email"
            style="@style/InputBackground"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="225dp"
            android:layout_height="48dp"
            android:layout_margin="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:inputType="textPassword"
            android:hint="Contraseña"
            style="@style/InputBackground"/>

        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="225dp"
            android:layout_height="48dp"
            android:layout_margin="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:inputType="textPassword"
            android:hint="Confirmar contraseña"
            style="@style/InputBackground" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_margin="15dp"
            android:text="Crear Cuenta"
            style="@style/ButtonBackground"/>
    </LinearLayout>

    <!-- Botón para usuarios que ya tienen cuenta -->
    <Button
        android:id="@+id/alreadyAccountButton"
        android:layout_width="225dp"
        android:layout_height="48dp"
        android:text="Ya tengo cuenta"
        android:layout_marginBottom="15dp"
        style="@style/ButtonBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>